--- a/react/assets/forus-platform/scss/_common/dashboard.scss
+++ b/react/assets/forus-platform/scss/_common/dashboard.scss
@@ -3371,7 +3371,6 @@ body {
             transform: translate(0, -50%);
             z-index: 1;
             color: #151b26;
-            cursor: default;
 
             .tooltip-header {
                 font: 600 15px/28px var(--base-font);
@@ -4780,7 +4779,7 @@ body {
                         width: auto;
                     }
 
-                    & > .form-offset, & >.form-control, & >.form-control {
+                    & > .form-offset, & >.form-control {
                         width: auto;
                     }
                 }
