--- a/react/assets/forus-platform/scss/_common/dashboard.scss
+++ b/react/assets/forus-platform/scss/_common/dashboard.scss
@@ -90,6 +90,8 @@
 }
 
 @import 'blocks/block-email-log-preview.scss';
+@import 'blocks/block-fund-amounts.scss';
+@import 'blocks/block-approve-fund-request.scss';
 
 // Select controls
 .select-control {
@@ -243,7 +245,9 @@ body {
                     line-height: 36px;
                     font-size: 18px;
                     cursor: pointer;
-                    transition: background 0.4s, color 0.4s;
+                    transition:
+                        background 0.4s,
+                        color 0.4s;
                     margin-right: 20px;
 
                     .mdi {
@@ -839,7 +843,7 @@ body {
     }
 
     .card-title {
-        font: 500 16px/28px var(--base-font);
+        font: 500 16px/30px var(--base-font);
         color: #282b39;
         cursor: inherit;
         display: flex;
@@ -901,7 +905,7 @@ body {
                 flex-direction: row;
                 gap: 10px;
                 align-items: center;
-                margin-right: -10px;
+                margin-right: -5px;
 
                 .block-inline-filters {
                     display: flex;
@@ -1027,7 +1031,7 @@ body {
     }
 
     .card-section {
-        padding: 25px;
+        padding: 20px;
         position: relative;
         cursor: inherit;
         font: 500 13px var(--base-font);
@@ -1091,7 +1095,7 @@ body {
         }
 
         .card-section-inner {
-            margin: -25px;
+            margin: -20px;
         }
 
         .card-section-actions {
@@ -1249,6 +1253,8 @@ body {
     }
 
     .card-footer {
+        padding: 15px 20px;
+
         &.card-footer-warning {
             background: #fcfaf6;
         }
@@ -1308,7 +1314,7 @@ body {
 
 .card-block {
     &.card-block-table {
-        margin: -25px;
+        margin: -20px;
     }
 
     &.card-block-listing {
@@ -1682,7 +1688,7 @@ body {
     }
 
     &.card-block-notes {
-        margin: -25px;
+        margin: -20px;
 
         .note-form {
             padding: 15px 15px 15px 55px;
@@ -1973,8 +1979,8 @@ body {
 
     &.card-block-implementation {
         display: flex;
-        padding: 25px;
-        margin: -25px;
+        padding: 20px;
+        margin: -20px;
         cursor: pointer;
 
         .card-block-implementation-logo {
@@ -2062,7 +2068,7 @@ body {
 
     &.card-block-bank {
         display: flex;
-        margin: -25px;
+        margin: -20px;
         border-radius: inherit;
 
         .card-block-bank-media {
@@ -4395,7 +4401,9 @@ body {
             border-radius: 60px;
             background: #fff;
             color: #009ef4;
-            transition: color 0.4s, background-color 0.4s;
+            transition:
+                color 0.4s,
+                background-color 0.4s;
 
             .mdi {
                 color: inherit;
@@ -4409,7 +4417,9 @@ body {
             .csv-upload-text {
                 font: 500 16px var(--base-font);
                 color: #282b39;
-                transition: color 0.4s, background-color 0.4s;
+                transition:
+                    color 0.4s,
+                    background-color 0.4s;
 
                 span {
                     font: 400 12px var(--base-font);
@@ -5431,7 +5441,11 @@ body {
             font: 500 13px/20px var(--base-font);
             color: #2f2e43;
             padding: 5px 10px;
-            transition: color 0.4s, border-color 0.4s, background-color 0.4s, box-shadow 0.4s;
+            transition:
+                color 0.4s,
+                border-color 0.4s,
+                background-color 0.4s,
+                box-shadow 0.4s;
             cursor: pointer;
             outline: none;
             border-radius: 0;
@@ -5684,7 +5698,9 @@ body {
         }
 
         &.complete {
-            transition: opacity 1s linear, width 0.3s linear;
+            transition:
+                opacity 1s linear,
+                width 0.3s linear;
         }
 
         &.start {
@@ -6034,7 +6050,11 @@ body {
                 border: 1px solid #0c66ff;
                 border-radius: 8px;
                 font: 600 16px/21px var(--base-font);
-                transition: color 0.3s, border-color 0.3s, background 0.3s, box-shadow 0.3s;
+                transition:
+                    color 0.3s,
+                    border-color 0.3s,
+                    background 0.3s,
+                    box-shadow 0.3s;
                 margin: auto;
 
                 &:hover {
