--- a/react/assets/forus-webshop/scss/_common/sections/blocks/block-fund-pre-check-result.scss
+++ b/react/assets/forus-webshop/scss/_common/sections/blocks/block-fund-pre-check-result.scss
@@ -243,11 +243,11 @@
             padding: 15px;
             background: #fbfbfb;
 
-            .fund-pre-check-info-wrapper {
+            .fund-pre-check-info-section {
                 display: flex;
                 flex-direction: column;
-                border-radius: var(--border-radius);
                 border: 1px solid var(--border-color);
+                border-top: none;
                 background: #fff;
                 padding: 20px;
                 gap: 5px;
@@ -274,6 +274,7 @@
                         .fund-pre-check-info-list-item-content {
                             display: flex;
                             flex-direction: row;
+                            align-items: center;
                             gap: 6px;
                             width: 100%;
                             min-width: 0;
@@ -284,6 +285,10 @@
                                 height: 15px;
                                 color: #9e9e9e;
                                 font-size: 15px;
+
+                                &.fund-pre-check-info-list-item-icon-product {
+                                    color: #282B39;
+                                }
                             }
 
                             .fund-pre-check-info-list-item-title {
@@ -291,6 +296,10 @@
                                 font: 600 11px/14px var(--base-font);
                                 word-break: break-word;
                                 padding: 3px 0;
+                            }
+
+                            .fund-pre-check-info-list-item-count {
+                                font: 600 11px/14px var(--base-font);
                             }
 
                             .fund-pre-check-info-list-item-more {
@@ -333,6 +342,7 @@
 
                         &:last-child {
                             border-bottom: none;
+                            padding-bottom: 0;
                         }
                     }
                 }
@@ -361,10 +371,10 @@
                 .fund-pre-check-info-totals {
                     display: flex;
                     align-items: center;
-                    padding-top: 10px;
                     border-top: 1px solid var(--border-color);
-                    padding: 15px 20px;
-                    margin: 0 -20px -20px;
+                    padding: 0;
+                    margin: 0;
+                    border-top: none;
 
                     .fund-pre-check-info-totals-title {
                         font: 600 16px/24px var(--base-font);
@@ -376,8 +386,16 @@
                     }
                 }
 
+                &:first-child {
+                    border-top-left-radius: var(--border-radius);
+                    border-top-right-radius: var(--border-radius);
+                    border-top: 1px solid var(--border-color);
+                }
+
                 &:last-child {
                     border-left: 1px solid var(--border-color);
+                    border-bottom-left-radius: var(--border-radius);
+                    border-bottom-right-radius: var(--border-radius);
                 }
             }
         }
