pre-check fund exclude feature code refactoring

--- a/react/assets/forus-webshop/scss/_common/sections/blocks/block-fund-pre-check-result.scss
+++ b/react/assets/forus-webshop/scss/_common/sections/blocks/block-fund-pre-check-result.scss
@@ -252,6 +252,15 @@
                 padding: 20px;
                 gap: 5px;
 
+                .fund-pre-check-note-block {
+                    width: 100%;
+                    padding: 15px;
+                    background-color: #fffceb;
+                    border-radius: var(--border-radius);
+                    border: 1px solid #dbdcdb;
+                    font: 400 13px/18px var(--base-font);
+                }
+
                 .fund-pre-check-info-title {
                     font: 700 16px/24px var(--base-font);
                     margin: 0 0 0;
@@ -444,6 +453,10 @@
 
                 .fund-pre-check-info-wrapper {
                     padding: 15px;
+
+                    .fund-pre-check-note-block {
+                        font: 600 12px/18px var(--hf);
+                    }
 
                     .fund-pre-check-info {
                         .fund-pre-check-info-title {
