read-speaker integration

--- a/react/assets/forus-webshop/scss/_common/includes/third-party.scss
+++ b/react/assets/forus-webshop/scss/_common/includes/third-party.scss
@@ -395,6 +395,19 @@
     float: left;
 }
 
+.rs_addtools, .rsbtn {
+    margin: 0 0 !important;
+    display: flex;
+
+    .rsbtn_toolpanel {
+        position: absolute !important;
+    }
+}
+
+.rs_skip {
+    // read speaker skip class, added for referencing
+}
+
 ._720kb {
     &-datepicker {
         &-calendar {
