--- a/react/assets/forus-webshop/scss/_common/components/_breadcrumbs.scss
+++ b/react/assets/forus-webshop/scss/_common/components/_breadcrumbs.scss
@@ -1,35 +1,19 @@
 .block.block-breadcrumbs {
     position: relative;
-    padding: var(--breadcrumb-padding) 0px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: var(--breadcrumb-padding) 0;
+    font: 600 var(--breadcrumb-size) / 20px var(--base-font);
+    gap: 10px;
     margin: 0 0;
-    @include ellipsis();
-    
+
     .breadcrumb-item {
         display: inline-block;
-        font: 600 var(--breadcrumb-size)/20px var(--base-font);
         color: var(--breadcrumb-color);
-        transition: .4s;
+        transition: 0.4s;
         text-decoration: underline;
-
-        &:after {
-            content: '/';
-            display: inline-block;
-            user-select: none;
-            pointer-events: none;
-            cursor: default;
-            padding: 0 10px;
-            color: #aaa;
-            font-weight: 400;
-            text-decoration: none;
-            position: relative;
-            z-index: 0;
-        }
-
-        &:last-child {
-            &:after {
-                content: none;
-            }
-        }
+        font: inherit;
 
         &:hover {
             text-decoration: none;
@@ -39,6 +23,8 @@
             cursor: default;
             color: var(--breadcrumb-color-active);
             text-decoration: none;
+            pointer-events: none;
+            @include ellipsis();
         }
 
         &.breadcrumb-item-back {
@@ -51,21 +37,48 @@
         }
     }
 
+    .breadcrumb-item-separator {
+        user-select: none;
+        font: inherit;
+        pointer-events: none;
+        cursor: default;
+        color: #aaa;
+        font-weight: 400;
+        text-decoration: none;
+        position: relative;
+        z-index: 0;
+    }
+
+    .breadcrumb-read-speaker {
+        height: 28px;
+        margin: -4px 0 !important;
+        flex: 0 0 auto;
+    }
+
     @media screen and (max-width: 1700px) {
-        padding: calc(var(--breadcrumb-padding) * .75) 0px;
+        padding: calc(var(--breadcrumb-padding) * 0.75) 0px;
 
         .breadcrumb-item {
-            font: 600 calc(var(--breadcrumb-size) - 2px)/20px var(--base-font);
+            font: 600 calc(var(--breadcrumb-size) - 2px) / 20px var(--base-font);
         }
     }
 
     @media screen and (max-width: 1000px) {
         padding: 10px 0;
-        overflow: visible;
-        white-space: normal;
+        flex-wrap: wrap;
+        gap: 5px;
 
         .breadcrumb-item {
             font-size: 13px;
+
+            &.active {
+                white-space: initial;
+                text-overflow: initial;
+            }
+        }
+
+        .breadcrumb-read-speaker {
+            margin: 0 0 !important;
         }
     }
 }
