--- a/react/assets/forus-webshop/scss/_common/layout/_header.scss
+++ b/react/assets/forus-webshop/scss/_common/layout/_header.scss
@@ -64,6 +64,11 @@
             color: #fff;
             text-shadow: 1px 2px 2px rgba($color: #dfb1b1, $alpha: 0.15);
 
+            .header-read-speaker {
+                display: inline-flex !important;
+                margin: 0 0 15px !important;
+            }
+
             .header-title {
                 color: inherit;
                 font: 700 48px/1.3em var(--hf);
@@ -77,7 +82,7 @@
                 text-shadow: inherit;
                 text-align: inherit;
                 margin: 0 0 20px;
-    
+
                 p,
                 ul,
                 ol,
