add cookie-banner wip

--- a/react/assets/forus-webshop/scss/_common/components/_form.scss
+++ b/react/assets/forus-webshop/scss/_common/components/_form.scss
@@ -1040,6 +1040,13 @@
                 }
             }
         }
+
+        &.form-toggle-disabled,
+        &[disabled] {
+            pointer-events: none;
+            opacity: 0.5;
+            filter: saturate(0);
+        }
     }
 
     .form-group-info {
