--- a/react/assets/forus-webshop/scss/_common/includes/common.scss
+++ b/react/assets/forus-webshop/scss/_common/includes/common.scss
@@ -146,6 +146,10 @@ img {
     font-weight: 500 !important;
 }
 
+.fill-primary {
+    fill: var(--color-primary) !important;
+}
+
 .hidden {
     display: none;
 }
