change width and allow text wrap on funds dropdown

--- a/react/assets/forus-platform/scss/_common/dashboard.scss
+++ b/react/assets/forus-platform/scss/_common/dashboard.scss
@@ -100,10 +100,8 @@
 @import 'blocks/block-fund-request-assigned.scss';
 
 // Select controls
-.select-control {
-    @import 'select-controls/select-control-funds';
-    @import 'select-controls/select-control-organizations';
-}
+@import 'select-controls/select-control-funds';
+@import 'select-controls/select-control-organizations';
 
 // Dropdown menus
 .dropdown {
@@ -1000,7 +998,7 @@ body {
 
                 .mdi {
                     margin-right: 0;
-                    color: #646F79;
+                    color: #646f79;
                 }
             }
         }
@@ -1475,7 +1473,7 @@ body {
                     cursor: pointer;
 
                     .mdi {
-                        color: #646F79;
+                        color: #646f79;
                         font-size: 20px;
                     }
 
@@ -4936,7 +4934,7 @@ body {
             }
         }
 
-        .inline-filter-control {
+        .select-control {
             width: 180px !important;
 
             .select-control-input {
@@ -4957,8 +4955,13 @@ body {
 
             .select-control-options {
                 .select-control-option {
-                    padding-left: 7.5px;
+                    padding-left: 10px;
+                    font-size: 12px;
                 }
+            }
+
+            &.select-control-lg {
+                width: 240px !important;
             }
         }
 
@@ -5119,6 +5122,7 @@ body {
                             margin: 0 0 10px;
                             height: 30px;
                             font-size: 12px;
+                            width: 100% !important;
 
                             &.select-control {
                                 .select-control-search {
