--- a/react/assets/forus-platform/scss/_common/select-controls/select-control-organizations.scss
+++ b/react/assets/forus-platform/scss/_common/select-controls/select-control-organizations.scss
@@ -1,4 +1,4 @@
-&.select-control-organizations {
+.select-control.select-control-organizations {
     --control-height: 50px;
     --control-line-height: 24px;
     --control-option-height: 36px;
