read speaker integration - add breadcrumbs to all pages and fix pages and layout consistency

--- a/react/assets/forus-webshop/scss/_common/components/_breadcrumbs.scss
+++ b/react/assets/forus-webshop/scss/_common/components/_breadcrumbs.scss
@@ -30,6 +30,7 @@
         &.breadcrumb-item-back {
             color: var(--color-primary-light);
             margin-right: 30px;
+            white-space: nowrap;
 
             &:after {
                 content: none;
