--- a/react/assets/forus-webshop/scss/_common/sections/blocks/block-showcase.scss
+++ b/react/assets/forus-webshop/scss/_common/sections/blocks/block-showcase.scss
@@ -511,8 +511,9 @@
         }
 
         .showcase-wrapper {
-            padding: 0 20px;
+            padding: 10px 20px;
             position: relative;
+            border-top: 1px solid var(--border-color);
         }
 
         .showcase-mobile-filters {
