--- a/react/assets/forus-webshop/scss/_common/sections/blocks/block-cookie-banner.scss
+++ b/react/assets/forus-webshop/scss/_common/sections/blocks/block-cookie-banner.scss
@@ -10,6 +10,7 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+    border: 1px solid var(--border-color);
     border-radius: var(--border-radius);
     cursor: default;
 
