--- a/react/assets/forus-platform/scss/_common/blocks/block-table-config.scss
+++ b/react/assets/forus-platform/scss/_common/blocks/block-table-config.scss
@@ -73,13 +73,14 @@
         overflow: auto;
         z-index: 1;
         display: flex;
-        flex: 1 1 auto;
+        flex: 1 0 auto;
         @include webkit_scrollbar_horizontal();
 
         .table-settings-tooltip-list {
             display: flex;
             flex-direction: column;
             min-width: 0;
+            width: 100%;
 
             .table-settings-tooltip-item {
                 padding: 15px 20px;
@@ -88,7 +89,7 @@
                 display: flex;
                 flex-direction: column;
                 gap: 5px;
-                flex: 1 1 auto;
+                flex: 0 1 auto;
 
                 .table-settings-tooltip-item-title {
                     font: 600 14px/18px var(--base-font);
