--- a/react/assets/forus-platform/scss/_common/blocks/block-product.scss
+++ b/react/assets/forus-platform/scss/_common/blocks/block-product.scss
@@ -1,9 +1,13 @@
 .block.block-product {
-    margin: 0 0 20px;
+    display: flex;
+    align-items: flex-start;
+    flex-direction: row;
+    word-break: break-word;
+    gap: 20px;
 
     .block-product-media {
-        width: 190px;
-        border: 1px solid #D4D9DD;
+        flex: 0 0 190px;
+        border: 1px solid #d4d9dd;
         border-radius: 4px;
         overflow: hidden;
 
@@ -13,11 +17,16 @@
         }
     }
 
+    .block-product-content {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
+
     .block-product-details {
         display: flex;
         flex-direction: column;
-        gap: 10px;
-        margin-bottom: 20px;
+        gap: 5px;
 
         .block-product-name {
             font: 600 18px/24px var(--base-font);
@@ -28,62 +37,16 @@
         }
     }
 
-    .block-product-description-body {
-        font: 400 14px/20px var(--base-font);
-
-        ul,
-        ol,
-        li,
-        p {
-            font: inherit;
-            margin: 0 0 10px;
-        }
-
-        strong,
-        b,
-        em,
-        i {
-            font-weight: 600;
-        }
-
-        ul {
-            li {
-                margin: 0 0 5px;
-
-                &:before {
-                    content: '•';
-                    float: left;
-                    display: block;
-                    width: 15px;
-                    padding-left: 0;
-                    padding-right: 10px;
-                    font-size: 2em;
-                    line-height: 18px;
-                }
-
-                &:last-child {
-                    margin: 0 0 0;
-                }
-            }
-        }
-
-        ol {
-            padding-left: 15px;
-
-            li {
-                margin: 0 0 5px;
-
-                &:last-child {
-                    margin: 0 0 0;
-                }
-            }
+    .block-product-description {
+        & > *:last-child {
+            margin-bottom: 0;
         }
     }
 
     .block-product-separator {
         width: 100%;
-        border-top: 1px solid #D4D9DD;
-        margin: 20px 0;
+        height: 1px;
+        border-top: 1px solid var(--border-color);
     }
 
     .block-product-unseen-messages {
