fix product sku and ean validation error, add icon for key-value info block

--- a/react/assets/forus-platform/scss/_common/dashboard.scss
+++ b/react/assets/forus-platform/scss/_common/dashboard.scss
@@ -1477,6 +1477,19 @@ body {
                         font-size: 20px;
                     }
 
+                    &.keyvalue-value-info-block-toggle-secondary {
+                        .mdi {
+                            color: #134478;
+                            font-size: 16px;
+                        }
+
+                        &.active {
+                            .mdi {
+                                color: #009EF4;
+                            }
+                        }
+                    }
+
                     &:hover {
                         color: #426993;
                     }
